--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -1,7 +1,7 @@
 <div class="amp-content-panel noi-view" id="noi">
     <div class="amp-block">
         <div class="amp-table-wrapper" id="noi-summary">
-            <span id="noi-note"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用</span>
+            <span id="noi-note"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，数据是与商业系统打通，欢迎使用<b style="font-weight:bold;">ADI</b>数据导入服务</span>
             <table class="table table-right-bordered amp-table" >
                 <thead>
                 <tr>
