--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -153,7 +153,7 @@
             <div class="btn-wrapper pull-right">
                 <a class="btn btn-default amp-btn ys-tips" id="btn-save" ng-click="rCtrl.save()" data-toggle="tooltip" data-placement="top"  title="将于12月15日开放使用">保存</a>
                 <a class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-continue" ng-click="rCtrl.next()" ng-show="rCtrl.index=='add' ||rCtrl.index=='new' " data-toggle="tooltip" data-placement="top"  title="将于12月15日开放使用">继续录入</a>
-                <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用</span>
+                <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
 
             </div>
         </div>
