--- a/app/views/datatools/datatool_rpg_set_index.html
+++ b/app/views/datatools/datatool_rpg_set_index.html
@@ -7,7 +7,11 @@
         </ul>
     </div><!--amp-content-header-->
     <div class="amp-block">
+        <span class="amp-tipsnote" style="position: relative;float:left; top:5px;background-color:transparent;margin-left:-3px;margin-bottom:35px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
+
         <div class="amp-table-wrapper" id="rpg-set-info">
+
+
             <table class="table table-right-bordered amp-table" >
                 <thead>
                 <tr>
@@ -41,9 +45,10 @@
         </div><!--end ys-finacial-income-table-->
     </div><!--ys-block-->
     <div class="amp-block-pd">
-        <div class="btn-wrapper">
+          <div class="btn-wrapper">
             <a href="amp_main_solo.html" class="btn btn-default amp-btn" target="_blank">推算</a>
         </div>
+
     </div>
 </div><!-- contentpanel -->
 <!--
