--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -299,10 +299,14 @@
                                 </div>
                             </div>
                             <div class="block bottom-block bottom-block-fixed clearfix">
-                                <div class="btn-wrapper pull-right">
+                                <div class="clearfix">
+                                    <span class="amp-tipsnote" style="position: relative;float:right;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
+
+                                </div>
+                                 <div class="btn-wrapper pull-right">
                                     <a  class="btn btn-default amp-btn ys-tips" id="btn-go" ng-click="sCtrl.checkReturn()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">查看回报</a>
                                     <a  class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-dismiss" ng-click="sCtrl.dismiss()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">解约</a>
-                                    <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用</span>
+
 
                                 </div>
                             </div>
