--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -673,7 +673,7 @@
     <div class="amp-block-pd bottom-block clearfix">
         <div class="btn-wrapper pull-right">
             <a ui-sref="rpgresult" ui-sref-active="active" href="#/rpgresult" class="btn btn-default amp-btn ys-tips" id="btn-create" ng-click="sCtrl.setSave()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" style="float:right;">生成租金包</a>
-            <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:36px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用</span>
+            <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:36px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
 
         </div>
     </div>
