--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -234,5 +234,5 @@ tr.tr-collapse .icon-menu-down {
 .ys-amp .tooltip-inner { max-width: 200px; padding: 3px 8px; color: #8592a3; text-align: center; background-color: #f3f4f8; border-radius: 4px; }
 .amp-btn:hover em.ys-icon-tips{background-position:-593px -198px;}
 
-.amp-tipsnote{position:absolute;display: block;top:10px;left:22px;padding: 3px 8px; padding-left:28px; color: #ea7444; text-align: center; background-color: #f3f4f8; border-radius: 4px; font-size: 13px;}
+.amp-tipsnote{position:absolute;display: block;top:10px;left:22px;padding: 3px 8px; padding-left:28px; color: #fd7170; text-align: center; background-color: #f3f4f8; border-radius: 4px; font-size: 13px;}
 .amp-tipsnote .ys-icon-tips{left:5px;margin-top:-11px;}
