--- a/app/components/toolbar/filter.css
+++ b/app/components/toolbar/filter.css
@@ -20,7 +20,7 @@
 .amp-side-toolbar .toolbar-blank{padding-top:0;padding-bottom:0;display: none;}
 .leftpanel-collapsed .amp-side-toolbar{display: none;}
 
-.amp-side-toolbar .toolbar-block{padding-left:12px;padding-right:12px;border-bottom: solid 1px #394152;}
+.amp-side-toolbar .toolbar-block{padding-left:12px;padding-right:12px;border-bottom: solid 1px #394152;background-color: rgba(255,255,255,0.05);}
 .amp-side-toolbar .toolbar-item{margin-bottom:16px;}
 .amp-side-toolbar .toolbar-item:nth-last-child(1){margin-bottom: 0;}
 .amp-side-toolbar .toolbar-item label{display: block;margin-bottom:3px;height:18px;line-height: 18px;color:#8592a3;font-size: 12px;}
