--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -181,7 +181,7 @@
                         </tr>
                         <tr class="tr-sub tr-split-bottom" data-index="26">
                             <th>{{pCtrl.irrData[26].values[0].value}}</th>
-                            <td>{{pCtrl.irrData[26].values[1].value}}</td>
+                            <td>第{{pCtrl.irrData[26].values[1].value|number:2}}年</td>
                         </tr>
 
                         <tr class="tr-main tr-head" data-index="27">
@@ -499,7 +499,7 @@
                                 </tr>
 
                                 <tr class="tr-main tr-split-top" data-index="23">
-                                    <th ng-repeat="pv in pCtrl.irrData[23].values | take:2 :pCtrl.quitYear ">{{pv.value}}</th>
+                                    <th ng-repeat="pv in pCtrl.irrData[23].values | take:2 :pCtrl.quitYear ">第{{pv.value}}年</th>
                                 </tr>
                                 <tr class="tr-sub tr-main-sum tr-split-bottom tr-note" data-index="24">
                                     <td ng-repeat="pv in pCtrl.irrData[24].values | take:2 :pCtrl.quitYear ">{{pv.value| number:2}}</td>
@@ -631,7 +631,7 @@
 
             <a href="javascript:void(0)" class="btn btn-default amp-btn ys-tips" id="btn-save" ng-click="pCtrl.save()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" >保存</a>
             <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-count" ng-click="pCtrl.count()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">计算</a>
-            <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
+           <!-- <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>-->
         </div>
     </div>
     </form>
