--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -8,6 +8,7 @@
         </ul>
     </div><!--amp-content-header-->
     <div class="amp-block">
+        <span class="amp-tipsnote" style="position: relative;float:left; top:5px;background-color:transparent;margin-left:-3px;margin-bottom:20px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
         <div class="amp-table-wrapper" id="noi-main-table-wrapper">
             <div class="ys-table-fixed-top" >
                 <table class="table table-no-bordered amp-table table-header-fixed">
@@ -70,7 +71,7 @@
 
                 <button type="button" class="btn btn-default amp-btn" id="btn-go" ng-click="dCtrl.loadPage(dCtrl.paginator.pageTarget)">确定</button>
             </div>
-            <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:36px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
+            <!--<span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:36px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>-->
         </div>
     </div><!--ys-block-->
 </div><!-- contentpanel -->
