--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -5,7 +5,11 @@
             <li><a href="#" id="tri-0-1-0" class="header-subnav-item active" target="#page-frame">推演模拟</a></li>
         </ul>
     </div><!--amp-content-header-->
+    <div class="clearfix">
+        <span class="amp-tipsnote" style="position: relative;float:left; top:5px;background-color:transparent;margin-left:-3px;margin-bottom:15px;margin-top:15px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用。可提供数据整合服务</span>
+    </div>
     <div class="ys-block">
+
         <div class="clearfix">
             <div class="col-xs-6"  id="datatool-sim-floor-table">
                 <div  style="width:100%;">
@@ -299,10 +303,10 @@
                                 </div>
                             </div>
                             <div class="block bottom-block bottom-block-fixed clearfix">
-                                <div class="clearfix">
+                                <!--<div class="clearfix">
                                     <span class="amp-tipsnote" style="position: relative;float:right;background-color:transparent;margin-right:16px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
 
-                                </div>
+                                </div>-->
                                  <div class="btn-wrapper pull-right">
                                     <a  class="btn btn-default amp-btn ys-tips" id="btn-go" ng-click="sCtrl.checkReturn()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">查看回报</a>
                                     <a  class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-dismiss" ng-click="sCtrl.dismiss()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">解约</a>
