--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -18,7 +18,11 @@
                     <input class="" size="16" type="text" placeholder="2016-10" disabled ng-model="sCtrl.rpgSetData.openDate" }>
                 </div>
             </div>
+            <span class="amp-tipsnote" style="position: relative;float:right; top:10px;background-color:transparent;margin-left:-3px;margin-bottom:0;margin-right:30px;">
+                <em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用。可提供数据整合服务
+            </span>
         </div>
+
     </div><!--amp-content-header-->
 
     <div class="amp-block-pd clearfix">
@@ -673,8 +677,6 @@
     <div class="amp-block-pd bottom-block clearfix">
         <div class="btn-wrapper pull-right">
             <a ui-sref="rpgresult" ui-sref-active="active" href="#/rpgresult" class="btn btn-default amp-btn ys-tips" id="btn-create" ng-click="sCtrl.setSave()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" style="float:right;">生成租金包</a>
-            <span class="amp-tipsnote" style="position: relative;float:right; top:5px;background-color:transparent;margin-right:36px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用，可提供数据整合服务</span>
-
         </div>
     </div>
 </div><!-- contentpanel -->
