--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -1,11 +1,14 @@
 <div class="amp-content-panel" id="irr-plan">
-    <div class="amp-content-header clearfix">
+    <div class="amp-content-header clearfix" >
         <!-- Breadcrumb / Summary info-->
         <ul class="header-nav-sub clearfix">
             <li><a href="#" id="tri-0-1-0" class="header-subnav-item active" target="#page-frame">回报测算</a></li>
         </ul>
     </div><!--amp-content-header-->
     <form name="irr-form">
+        <div class="clearfix">
+            <span class="amp-tipsnote" style="position: relative;float:left; top:5px;background-color:transparent;margin-left:-3px;margin-bottom:20px;"><em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>体验版数据为模拟数据，请勿引用。可提供数据整合服务</span>
+        </div>
     <div class="amp-block">
         <div class="amp-table-wrapper-swiper" id="irr-plan-table-wrapper" style="height:2580px;">
             <div class="ys-table-fixed-top" style="padding-left:375px;">
