--- a/app/components/toolbar/filter.css
+++ b/app/components/toolbar/filter.css
@@ -95,6 +95,7 @@
     width: 100%;
     border: solid 1px #394052;
     background-color: #4b5368;
+    z-index:2999;
 }
 
 .item-select-filter .dropdown-menu>li{
