--- a/app/static/css/common/amp_main.css
+++ b/app/static/css/common/amp_main.css
@@ -262,6 +262,9 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 .ys-amp .bottom-block .btn-wrapper .amp-btn{height:32px;padding:3px 15px;text-align: center;font-size:14px;line-height: 24px;border: solid 1px #5ab46e;min-width: 110px;border-radius: 2px;}
 .ys-amp .bottom-block .btn-wrapper .amp-btn.amp-btn-reverse{background-color:#fff;color: #5ab46e;}
 
+.ys-amp .bottom-block .btn-wrapper .amp-btn[disabled]:hover{background-color: #4c9855;color:#fff;}
+.ys-amp .bottom-block .btn-wrapper .amp-btn.amp-btn-reverse[disabled]:hover{background-color:#f3f3f3;color: #5ab46e;}
+
 /*amp solo*/
 #page-solo{padding-left:0;}
 #page-solo .headerpanel{left:0;padding:0;}
