--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -236,3 +236,13 @@ tr.tr-collapse .icon-menu-down {
 
 .amp-tipsnote{position:absolute;display: block;top:10px;left:22px;padding: 3px 8px; padding-left:28px; color: #fd7170; text-align: center; background-color: #f3f4f8; border-radius: 4px; font-size: 13px;}
 .amp-tipsnote .ys-icon-tips{left:5px;margin-top:-11px;}
+
+
+input[type=number] {
+    -moz-appearance:textfield;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
