--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -11,7 +11,7 @@
                     <td>
                         <div class="input-wrapper">
                             <label>铺位号</label>
-                            <input type="text" value="" ng-model="rCtrl.shopInfo.shopIndex"/>
+                            <input type="text" value="" ng-model="rCtrl.shopInfo.shopIndex" required/>
                         </div>
                     </td>
                     <td>
@@ -56,14 +56,14 @@
                     <td>
                         <div class="input-wrapper">
                             <label>建筑面积</label>
-                            <input type="text" value="" ng-model="rCtrl.shopInfo.floorArea"/>
+                            <input type="number" value="" ng-model="rCtrl.shopInfo.floorArea"/>
                         </div>
                     </td>
 
                     <td>
                         <div class="input-wrapper">
                             <label>套内面积</label>
-                            <input type="text" value="" ng-model="rCtrl.shopInfo.indoorArea"/>
+                            <input type="number" value="" ng-model="rCtrl.shopInfo.indoorArea"/>
                         </div>
                     </td>
 
@@ -118,11 +118,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[0]"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[1]"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[2]"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[3]"/></div> </td>
-                    <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.rentStandard[4]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.rentStandard[0]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.rentStandard[1]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.rentStandard[2]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.rentStandard[3]"/></div> </td>
+                    <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.rentStandard[4]"/></div> </td>
                 </tr>
             </tbody>
         </table>
@@ -141,11 +141,11 @@
             </thead>
             <tbody>
             <tr>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[0]"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[1]"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[2]"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[3]"/></div> </td>
-                <td> <div class="input-wrapper"><input type="text" value="" ng-model="rCtrl.shopInfo.wyStandard[4]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.wyStandard[0]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.wyStandard[1]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.wyStandard[2]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.wyStandard[3]"/></div> </td>
+                <td> <div class="input-wrapper"><input type="number" value="" ng-model="rCtrl.shopInfo.wyStandard[4]"/></div> </td>
             </tr>
             </tbody>
         </table>
