--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -89,13 +89,13 @@
                                         <th><span>2016</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[0]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[0]">
                                                 <span class="number-format">{{sCtrl.shopInfo.rentStandard[0]|number:2}}</span>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[0]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[0]">
                                                 <span class="number-format">{{sCtrl.shopInfo.wyStandard[0]|number:2}}</span>
                                             </div>
                                         </td>
@@ -104,13 +104,13 @@
                                         <th><span>2017</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[1]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[1]">
                                                 <span class="number-format">{{sCtrl.shopInfo.rentStandard[1]|number:2}}</span>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[1]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[1]">
                                                 <span class="number-format">{{sCtrl.shopInfo.wyStandard[1]|number:2}}</span>
                                             </div>
                                         </td>
@@ -119,13 +119,13 @@
                                         <th><span>2018</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[2]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[2]">
                                                 <span class="number-format">{{sCtrl.shopInfo.rentStandard[2]|number:2}}</span>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[2]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[2]">
                                                 <span class="number-format">{{sCtrl.shopInfo.wyStandard[2]|number:2}}</span>
                                             </div>
                                         </td>
@@ -134,13 +134,13 @@
                                         <th><span>2019</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[3]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[3]">
                                                 <span class="number-format">{{sCtrl.shopInfo.rentStandard[3]|number:2}}</span>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[3]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[3]">
                                                 <span class="number-format">{{sCtrl.shopInfo.wyStandard[3]|number:2}}</span>
                                             </div>
                                         </td>
@@ -149,13 +149,13 @@
                                         <th><span>2020</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[4]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentStandard[4]">
                                                 <span class="number-format">{{sCtrl.shopInfo.rentStandard[4]|number:2}}</span>
                                             </div>
                                         </td>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input">
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[4]">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.wyStandard[4]">
                                                 <span class="number-format">{{sCtrl.shopInfo.wyStandard[4]|number:2}}</span>
                                             </div>
                                         </td>
