--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -201,7 +201,8 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 #page-frame{width:100%;height:100%;border:0;overflow: auto;}
 
 .header-right{position: absolute;width:32px;height:32px;border-radius:32px;background-color:#ccc;top:50%;right:40px;margin-top:-16px;}
-.ys-figure{display: block;position: absolute;top:0;left:0;width:32px;height:32px;border-radius:32px;background-image: url(../../images/main/figure.jpg);background-position: center center;background-repeat: no-repeat;background-size: contain;}
+.ys-figure{display: block;position: absolute;
+    top: 6px;left:0;width:32px;height:32px;border-radius:32px;background-image: url(../../images/main/figure.jpg);background-position: center center;background-repeat: no-repeat;background-size: contain;}
 
 #countdown-wrapper{width:inherit;padding-left:22px;height:44px;line-height: 44px;background-color: transparent;top:0;margin-top:0;}
 span#countdown{font-size: 14px;height:44px;line-height: 44px;color:#373c42;}
@@ -324,6 +325,7 @@ span#countdown .countdown-lastDay~em.unit{display: none;}
     border-radius:12px;background-color:rgba(62,70,88,0.62);}
 
 .ys-amp.ys-amp-solo .amp-loading>.loading-wrapper{margin-left:-90px;}
+
 .ys-amp .amp-loading>.loading-wrapper>.loading-ani{width:60px;height:60px;position: absolute;top:20px;left:50%;margin-left:-30px;}
 .ys-amp .amp-loading>.loading-wrapper>span{display: block;color:#fff;font-size:16px;text-align: center;height:44px;line-height: 44px;}
 
